--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,27 @@
+*{
+    font-family: Comic Sans MS, Comic Sans, cursive;
+    color: white;
+}
 
 body{
     margin:0;
     padding:0;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 30%, rgba(0,212,255,1) 60%, rgba(0,212,255,1) 76%, rgba(0,212,255,1) 80%, rgba(0,212,255,1) 100%);
-    height: 100vh;
-
+    height: 100%;
 }
 main{
-    margin:0 auto;
-    top: 40%;
-    width: 40vw;
-    height: 30vh;
+    margin: 0 auto;
+    width: 40%;
+    height: 100vh;
     text-align: center;
     position: relative;
     
 
+}
+main form{
+    position: relative;
+    top:40%
 }
 main input{
     width:80%;
@@ -50,11 +56,11 @@ main button:active{
 header{
     height: 50px;
 }
+
 #body{
     height: 100%;
     background: rgb(0,212,255);
-background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 10%, rgba(6,6,70,1) 50%, rgba(9,9,121,1) 90%, rgba(0,212,255,1) 100%);
-
+    background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 10%, rgba(6,6,70,1) 50%, rgba(9,9,121,1) 90%, rgba(0,212,255,1) 100%);
 }
 i{
     position: absolute;
@@ -71,10 +77,21 @@ i{
 article{
     margin:0 auto;
     width: 80vw;
+    margin-top: -20px;
+
 }
 section{
-    border: 1px red dashed;
+    border: 2px darkgray dashed;
     border-radius: 25px;
     padding:10px;
-    margin: 3px;
+    margin-top: 10px;
+    font-size:18px
+}
+
+#comment{
+    margin:0 auto 0 60px;
+    font-size:14px
+}
+img{
+    color:white;
 }
